# static-websites

./: .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .yamlfmt.yaml  build.py  cleanup.py  console.py  deploy.py  exceptions.py  index.html  pyproject.toml  zizmor.yaml
.build/: main.py  pyproject.toml
.build_and_deploy/: .yamllint  __main__.py  build.py  cleanup.py  console.py  custom_template_tags.py  deploy.py  exceptions.py  pyproject.toml
.build_and_deploy/custom_template_tags/: __init__.py  icons_list.py  simple_dates.py
.build_and_deploy/utils/: __init__.py  logging_setup.py  validators.py
.common/: base.html  pre_base.html
.common/fragments/: site_copyright.html
.github/: CODEOWNERS  dependabot.yaml  renovate.json
.github/workflows/: autofix-pre-commit.yaml  build-website.yaml  build-websites.yaml  check-and-build-websites.yaml  check-build-and-deploy-websites.yaml  check-build-deploy.yaml  check-build-script.yaml
car-points/: index.html
car-points/static/bootstrap-5.2.0-dist/css/: bootstrap-reboot.min.css  bootstrap-reboot.rtl.css  bootstrap-reboot.rtl.min.css.map  bootstrap.rtl.css.map  bootstrap.rtl.min.css.map
car-points/static/bootstrap-5.2.0-dist/js/: bootstrap.esm.min.js.map  bootstrap.min.js.map
carrotmanmatt.com/: index.html
carrotmanmatt.com/static/css/: noscript.css
components/: __init__.py  base.html
components/fragments/: site_copyright.html
custom_template_tags/: __init__.py
sites/: __init__.py  car_points.py  carrotmanmatt_com.py  olympic_show_uk.py
static/car-points/bootstrap-5.2.0-dist/css/: bootstrap-grid.css.map  bootstrap-grid.min.css  bootstrap-grid.min.css.map  bootstrap-grid.rtl.css  bootstrap-grid.rtl.css.map  bootstrap-grid.rtl.min.css.map  bootstrap-reboot.css.map  bootstrap-reboot.min.css.map  bootstrap-reboot.rtl.css.map  bootstrap-reboot.rtl.min.css  bootstrap-utilities.css  bootstrap-utilities.css.map  bootstrap.rtl.css
static/car-points/bootstrap-5.2.0-dist/js/: bootstrap.bundle.js.map  bootstrap.esm.js.map
static/car-points/css/: main.css
static/car-points/favicon/: site.webmanifest
static/car-points/js/: main.js
static/carrotmanmatt.com/css/: main.css
static/carrotmanmatt.com/favicon/: browserconfig.xml  site.webmanifest
static/carrotmanmatt.com/sass/: noscript.scss
static/olympic-show.uk/css/: main.css
static/olympic-show.uk/favicon/: site.webmanifest
static/olympic-show/css/: main.css
static/olympic-show/js/: entry-server-routing.js  pages_index.js
static/sass/: main.scss
utils/: __init__.py  logging_setup.py  validators.py
website/: index.html
